-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.2
-
None
-
Ubuntu 14.04 x64
Qt Creator crashes while activating GenericProjectManager -> EditFiles command.
To reproduce:
1. Create generic project: Ctrl+N, Import Project, Import Existing Project
2. Import some dir with sources (I use it to edit html/js files)
3. Tools->Options->Keyboard, search for "editfiles", assign some shortcut, OK
4. Activate shortcut — QtCreator crashes.
Stacktrace is attached.
For Gerrit Dashboard: QTCREATORBUG-14728 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
121426,5 | Fix various context menu actions from project managers | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
122151,1 | Fix various context menu actions from project managers | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |